# ecommerce-cs-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LOCAL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: api_server.py  streamlit_app.py
data/: eval_dataset.jsonl  orders.json  products.json
data/faq/: address_change.md  cancel_order.md  contact_support.md  coupon.md  exchange.md  invoice.md  membership.md  out_of_stock.md  payment.md  price_protect.md  refund_timeline.md  return_window.md  shipping_fee.md  shipping_time.md  warranty.md
deploy/: nginx-example.conf
deploy/systemd/: ecommerce-agent-streamlit.service.example  ecommerce-agent.service.example
scripts/: build_index.py  deploy_server.sh  generate_eval_dataset.py  generate_mock_data.py  run_eval.py  run_local_services.sh  stop_local_services.sh
src/: __init__.py  config.py  state.py
src/eval/: __init__.py  metrics.py  runner.py
src/graph/: __init__.py  deterministic_graph.py  react_graph.py  router.py
src/llm/: __init__.py  factory.py  fake_llm.py  io_trace.py  json_utils.py  persona_prompts.py  rules.py  web_plan.py
src/memory/: __init__.py  long_term.py  short_term.py  working.py
src/nodes/: __init__.py  act.py  confirm.py  guardrails.py  memory_update.py  nlu.py  observe.py  plan.py  reflect.py  retrieve.py  think.py  understand.py
src/retrieval/: __init__.py  hybrid.py  tokenizer.py  (+1 more)
tests/: conftest.py  test_graph.py  test_metrics.py  test_nlu.py  test_retrieval.py  test_search_products.py  test_web_search_tool.py  test_weighted_fusion.py
(+12 files in other folders)
