[project]
name = "ecommerce-cs-agent"
version = "0.1.0"
description = "Observable e-commerce customer-service agent built with LangGraph (resume re-implementation)."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
